--- a/code/MOEAFramework-2.12/.classpath
+++ b/code/MOEAFramework-2.12/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="book"/>
 	<classpathentry kind="src" path="examples"/>
+	<classpathentry kind="src" path="DTA_BID"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.8.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
@@ -12,5 +13,10 @@
 	<classpathentry kind="lib" path="lib/JMetal-4.3.jar"/>
 	<classpathentry kind="lib" path="lib/rsyntaxtextarea.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/2019/05. Anh Tuan/MOEA/code/MultiRoundBid/libs/json-20160810.jar"/>
+	<classpathentry kind="lib" path="D:/2019/05. Anh Tuan/MOEA/code/MultiRoundBid/libs/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="D:/2019/05. Anh Tuan/MOEA/code/MultiRoundBid/libs/jcommon-1.0.20.jar"/>
+	<classpathentry kind="lib" path="D:/2019/05. Anh Tuan/MOEA/code/MultiRoundBid/libs/jfreechart-1.0.15.jar"/>
+	<classpathentry kind="lib" path="D:/2019/05. Anh Tuan/MOEA/code/MultiRoundBid/libs/JMetal-4.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
