--- a/code/MOEAFramework-2.12/.classpath
+++ b/code/MOEAFramework-2.12/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="book"/>
 	<classpathentry kind="src" path="examples"/>
 	<classpathentry kind="src" path="DTA_BID"/>
+	<classpathentry kind="src" path="NHOM7"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.8.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
